welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not found: value h
  recule(h-1)
         ^Array1:32: error: not found: value T
  	T(i)=getCouleurSol()
        ^Array1:37: error: not found: value T
    c=T(i)
      ^