welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	leveBrosse()
  recule(h-1)
  gauche()
  avance()
  droite()
  peindre()
  gauche()
  avance()
  droite()
  peindre()
  gauche()
  avance()
  droite()
  peindre()
  gauche()
  avance()
  droite()
  peindre()
  gauche()
  avance()
  droite()

}

def peindre(){
  var h:Int=0
	h=getMondeHauteur()  
  var c:Color=Color.white
  for (i <-0 to h-1){
  	T(i)=getCouleurSol()
  	avance()
  }
  for (i <- 0 to h-1){
    avance()
    c=T(i)
    setCouleurBrosse(c)
    baisseBrosse()
  }
  leveBrosse()
}